[package]
name = "chip-8-compiler"
version = "0.1.1"
authors = ["Sarenard"]
edition = "2021"
license = "MIT"
description = "A tool to compile to chip-8"
homepage = "https://github.com/Sarenard/chip-8-compiler"
repository = "https://github.com/Sarenard/chip-8-compiler"
keywords = ["chip-8", "compilation", "compiling"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
